# agent-project

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SPECIALIZED.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  TRAINING_AND_DEPLOYMENT_GUIDE.md  config_tesseract_env_fixed.ps1  count_words.py  docker-compose.specialized.yml  docker-compose.yml  env.example  fix_encoding.py  github_repository_link.txt  install_docker.sh  process_docx_scripts.py  pyproject.toml  quick_start.py  quick_start.sh  run_system.sh  sample_script.txt  simple_train_with_scripts.py  test_api.py  test_imports.py  test_multi_agent.py  test_simple.py  test_system.py  train_with_scripts.py
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: Dockerfile  __init__.py  app.py  requirements.txt
api/app/: main.py  main_simple.py  nebula_init.nGQL
api/app/agents/: __init__.py  analysis_agent.py  chief_editor_agent.py  logic_agent.py  story_agent.py  validation_agent.py
api/app/services/: llm_service.py  nebula_service.py  vector_service.py
api/routers/: admin.py  compression.py  health.py  rag.py  specialized_compression.py
core/: __init__.py
core/agents/: __init__.py  analysis_agent.py  base_agent.py  chief_editor.py  logic_agent.py  story_agent.py  validation_agent.py
core/data/: data_pipeline.py
core/models/: compression_models.py  script_models.py  specialized_compression_model.py
core/services/: __init__.py  compression_service.py  graph_service.py  llm_service.py  rag_service.py  specialized_compression_service.py  vector_service.py
core/training/: loss_functions.py  trainer.py
data/extracted/: PROCESSING_REPORT.md  complete_training_dataset_v3.json  comprehensive_training_dataset.json  ke_mansion_murder_full.json  ke_mansion_murder_simple.json  specialized_training_dataset_v2.json  training_sample_compressed.json
data/samples/: MANUAL_PROCESSING_GUIDE.md  training_sample_template.json  柯家庄园谋杀案.json
deployment/docker/: Dockerfile.api  docker-compose.yml
infrastructure/: __init__.py
models/specialized_compression/: best_model.json  test_report.json  training_report.json
models/specialized_compression/checkpoints/: checkpoint_epoch_2.json  checkpoint_epoch_4.json
requirements/: base.txt  dev.txt  prod.txt
scripts/: auto_extract_text.py  create_training_data.py  evaluate_model.py  extract_docx.py  quick_test.py  setup.sh  simple_extract.py  simulate_training.py  start.sh  test.sh  test_specialized_compression.py  train_model.py  train_specialized_model.py
scripts/configs/: training_config.yaml
shared/: __init__.py
shared/config/: settings.py
shared/utils/: exceptions.py
